--- a/src/app/participant/participant.component.html
+++ b/src/app/participant/participant.component.html
@@ -1,3 +1,89 @@
-<p>
-  participant works!
-</p>
+<!--<mat-table [dataSource] = "dataSource">-->
+
+<!--</mat-table>-->
+<div class="container">
+  <mat-card>
+    <mat-card-content>
+      <div class="first-step">
+        <mat-form-field class="select-city">
+          <mat-select placeholder="Select City">
+            <mat-option *ngFor="let city of cites" [value]="city.value">
+              {{ city.value }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+
+        <button mat-raised-button color="primary" (click)="search()" style="margin-left:20px">Search</button>
+      </div>
+      <div class="filter-header">
+        <mat-form-field style="width: 90%">
+          <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+        </mat-form-field>
+      </div>
+      <div>
+      <mat-table #table [dataSource]="dataSource" matSort>
+        <ng-container matColumnDef="select">
+          <mat-header-cell *matHeaderCellDef>
+            <mat-checkbox (change)="$event ? masterToggle() : null"
+                          [checked]="selection.hasValue() && isAllSelected()"
+                          [indeterminate]="selection.hasValue() && !isAllSelected()">
+            </mat-checkbox>
+          </mat-header-cell>
+          <mat-cell *matCellDef="let row">
+            <mat-checkbox (click)="$event.stopPropagation()"
+                          (change)="$event ? selection.toggle(row) : null"
+                          [checked]="selection.isSelected(row)">
+            </mat-checkbox>
+          </mat-cell>
+        </ng-container>
+
+        <ng-container matColumnDef="studyId">
+          <mat-header-cell *matHeaderCellDef mat-sort-header>Study ID</mat-header-cell>
+          <mat-cell *matCellDef="let participant"> {{participant.studyId}} </mat-cell>
+        </ng-container>
+
+        <ng-container matColumnDef="oldParticipant">
+          <mat-header-cell *matHeaderCellDef mat-sort-header>Old Participant ID</mat-header-cell>
+          <mat-cell *matCellDef="let participant"> {{participant.oldParticipantId}} </mat-cell>
+        </ng-container>
+
+        <ng-container matColumnDef="addressId">
+          <mat-header-cell *matHeaderCellDef mat-sort-header>Address ID</mat-header-cell>
+          <mat-cell *matCellDef="let participant"> {{participant.addressId}} </mat-cell>
+        </ng-container>
+
+        <ng-container matColumnDef="lastName">
+          <mat-header-cell *matHeaderCellDef mat-sort-header>Last Name</mat-header-cell>
+          <mat-cell *matCellDef="let participant"> {{participant.lastName}} </mat-cell>
+        </ng-container>
+
+        <ng-container matColumnDef="firstName">
+          <mat-header-cell *matHeaderCellDef mat-sort-header>First Name</mat-header-cell>
+          <mat-cell *matCellDef="let participant"> {{participant.firstName}} </mat-cell>
+        </ng-container>
+
+        <ng-container matColumnDef="date">
+          <mat-header-cell *matHeaderCellDef mat-sort-header>Date of Birth</mat-header-cell>
+          <mat-cell *matCellDef="let participant"> {{participant.date}} </mat-cell>
+        </ng-container>
+
+        <ng-container matColumnDef="sex">
+          <mat-header-cell *matHeaderCellDef mat-sort-header>Sex</mat-header-cell>
+          <mat-cell *matCellDef="let participant"> {{participant.sex}} </mat-cell>
+        </ng-container>
+
+        <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+        <mat-row *matRowDef="let row; columns: displayedColumns;"(click)="selection.toggle(row)"></mat-row>
+      </mat-table>
+      <mat-paginator #paginator
+                     [pageSize]="10"
+                     [pageSizeOptions]="[5, 10, 20]"
+                     [showFirstLastButtons]="true">
+      </mat-paginator>
+      </div>
+    </mat-card-content>
+    <mat-card-actions class="delete-button">
+      <button mat-raised-button color="warn" (click)="delete()">Delete Participants</button>
+    </mat-card-actions>
+  </mat-card>
+</div>
