--- a/src/app/left-nav/left-nav.component.html
+++ b/src/app/left-nav/left-nav.component.html
@@ -4,7 +4,12 @@
       <mat-nav-list class="nav-list">
         <mat-list-item class="item">
           <a routerLink="participant" routerLinkActive="true">
-            <button mat-button><mat-icon>face</mat-icon>Participant</button>
+            <button mat-button><mat-icon>face</mat-icon>Participants</button>
+          </a>
+        </mat-list-item>
+        <mat-list-item class="item">
+          <a routerLink="addParticipant" routerLinkActive="true">
+            <button mat-button><mat-icon>contacts</mat-icon>Add Participant</button>
           </a>
         </mat-list-item>
         <mat-list-item class="item">
