--- a/src/app/left-nav/left-nav.component.html
+++ b/src/app/left-nav/left-nav.component.html
@@ -18,6 +18,11 @@
           </a>
         </mat-list-item>
         <mat-list-item class="item">
+          <a routerLink="addAddress" routerLinkActive="true">
+            <button mat-button><mat-icon>fiber_new</mat-icon>Add Address</button>
+          </a>
+        </mat-list-item>
+        <mat-list-item class="item">
           <a routerLink="speck" routerLinkActive="true">
             <button mat-button><mat-icon>data_usage</mat-icon>Speck Monitor</button>
           </a>
