added the sf36 feature

--- a/src/app/left-nav/left-nav.component.html
+++ b/src/app/left-nav/left-nav.component.html
@@ -23,6 +23,11 @@
           </a>
         </mat-list-item>
         <mat-list-item class="item">
+          <a routerLink="sf36" routerLinkActive="true">
+            <button mat-button><mat-icon>book</mat-icon>SF36</button>
+          </a>
+        </mat-list-item>
+        <mat-list-item class="item">
           <a routerLink="speck" routerLinkActive="true">
             <button mat-button><mat-icon>data_usage</mat-icon>Speck Monitor</button>
           </a>
