--- a/src/app/left-nav/left-nav.component.html
+++ b/src/app/left-nav/left-nav.component.html
@@ -38,8 +38,8 @@
           </a>
         </mat-list-item>
         <mat-list-item class="item">
-          <a routerLink="health" routerLinkActive="true">
-            <button mat-button><mat-icon>favorite</mat-icon>Health</button>
+          <a routerLink="healthIntake" routerLinkActive="true">
+            <button mat-button><mat-icon>favorite</mat-icon>Health Intake</button>
           </a>
         </mat-list-item>
         <mat-list-item class="item">
